Wed Jan 25 01:41:53 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
        
          Some cosmetic changes.
        
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp

          Fixed a bug about when to killing a NodeApplication process.
        
        * ciao/Container_Base.cpp
        
          Comment out meaningless debug statement.

Wed Jan 25 00:56:39 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * examples/Hello/descriptors/run_test_without_ns.pl
        
          Modified to use the correct NodeManagerMap.dat file.

Wed Jan 25 00:47:02 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * examples/Hello/descriptors_RTCCM/RTsvc.conf
        * examples/Hello/descriptors_RTCCM/input.csr
        * examples/Hello/descriptors_RTCCM/rt-config-example.cdp
        * examples/Hello/descriptors_RTCCM/rt-config-example.csr
        * examples/Hello/descriptors_RTCCM/rt-example.cdp
        * examples/Hello/descriptors_RTCCM/rt_run_test.pl
        * examples/Hello/descriptors_ReDaC/deploymentplan.cdp
        * examples/Hello/descriptors_ReDaC/deploymentplan_add.cdp
        * examples/Hello/descriptors_ReDaC/deploymentplan_remove.cdp
        * examples/Hello/descriptors_naming/deploymentplan_naming.cdp
        
          Create some new descriptors, reorganized them, and put 
          them into different directories.

Wed Jan 25 00:23:02 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * CIAODAnCE.mwc
        
          Added another mwc file which only builds CIAO and DAnCE.
        
        * examples/Hello/step-by-step.html
        
          Fixed an error in this documentation page.

        * examples/Hello/descriptors/RTsvc.conf
        * examples/Hello/descriptors/TestNodeManagerMap.dat